@@ -1,0 +1,6 @@
+#!/bin/sh
+## Test repocutter count command
+${REPOCUTTER:-repocutter} -q count <vanilla.svn
+
+
+
