@@ -3,6 +3,7 @@
 Repository head::
      Change repoctter -f (basename) option to -n.
      Default filecopy to matching a regexp; -f now undoes this.
+     Add repocutter count command.
 
 4.33: 2022-12-21::
      Some potentially unsave shellouts have been fixed.
